@@ -2,7 +2,7 @@
  * **************************************************-
  * ingrid-iplug-se-iplug
  * ==================================================
- * Copyright (C) 2014 - 2022 wemove digital solutions GmbH
+ * Copyright (C) 2014 - 2023 wemove digital solutions GmbH
  * ==================================================
  * Licensed under the EUPL, Version 1.1 or – as soon they will be
  * approved by the European Commission - subsequent versions of the
@@ -57,7 +57,7 @@ public class DefaultFieldsQueryConverter implements IQueryParsers {
                 result.put(split[0], Float.parseFloat(split[1]));
             }
             else{
-                result.put(field, new Float(1.0F));
+                result.put(field, Float.valueOf(1.0F));
             }
         }
         return result;
